@@ -1,9 +1,9 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.19.30
+Version: 1.19.50
 Date: 2016-03-31
-Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, Meghan Short, and Isha Mehta
+Author: Habil Zare, Amir Foroushani, Rupesh Agrahari, Meghan Short, Isha Mehta, and Neda Emami
 Maintainer: Habil Zare <zare@u.washington.edu>
 biocViews: GeneExpression, RNASeq, NetworkInference, Network,
         GraphAndNetwork, BiomedicalInformatics, SystemsBiology,
